[tool.poetry]
name = "skill-manager"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/JleMyP/skill-manager"
authors = []

[tool.poetry.dependencies]
python = "^3.7"

django = "^3.0.0"
django-reversion = "^3.0"
django-extensions = "^2.2"
django-cors-headers = "^3.1"
django-split-settings = "^1.0"
django-environ = "^0.4.5"
django-polymorphic = "^3.0.0"
django-mptt = "^0.11.0"
django-constance = {version = "^2.4", extras = ["database"]}
django-debug-toolbar = "^2.2"
django-health-check = "^3.12.1"
django-storages = "^1.10.1"

django-loginas = "^0.3.6"
django-object-actions = "^2.0.0"
django-autocompletefilter = "^0.0.6"
django-json-widget = "^1.0.1"
django-markdownx = "^3.0.1"

django-filter = "^2.2"
djangorestframework = "^3.10"
djangorestframework_simplejwt = "^4.3"
djangorestframework-serializer-extensions = "^2.0.0"
django-rest-polymorphic = "^0.1.9"
drf-spectacular = "^0.13.1"

requests = "^2.22.0"
psycopg2-binary = "^2.8.4"
mdv = "^1.7.4"
uvicorn = "^0.11.5"
serverless-wsgi = "^1.7.5"
boto3 = "^1.15.11"

[tool.poetry.dev-dependencies]
Werkzeug = "^1.0"
ipython = "^7.7"
isort = "^4.3"
flake8 = "^3.7.9"
flakehell = "^0.9.0"
flake8-isort = "^2.8.0"
flake8-bandit = "^2.1.2"
flake8-variables-names = "^0.0.3"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.4.2"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations = "^2.7.0"
django-stubs = "1.8.0"
djangorestframework-stubs = "^1.4.0"
coverage = {version = "^5.0.3", extras = ["toml"]}
types-Markdown = "^3.3.6"
types-PyYAML = "^6.0.0"
types-pytz = "^2021.3.0"
types-requests = "^2.25.11"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 3
skip_glob = "**/migrations/*"

[tool.flakehell]
exclude = [".git", "__pycache__", "migrations"]
max_line_length = 100
format = "grouped"
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*", "-F403", "-F405"]
pycodestyle = ["+*", "-W503"]
flake8-annotations = ["+*", "-ANN002", "-ANN003", "-ANN101"]
"flake8-*" = ["+*"]
mccabe = ["+*"]

[tool.flakehell.exceptions."src/apps/main/import_providers/github.py"]
flake8-isort = ["-I001", "-I003", "-I004"]

[tool.coverage.run]
omit = [ "**/migrations/*" ]
source = [ "src" ]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
